--- a/NoteBook.API/NoteBook.API/Dockerfile
+++ b/NoteBook.API/NoteBook.API/Dockerfile
@@ -9,17 +9,17 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["NotesAPI/NotesAPI.csproj", "NotesAPI/"]
-RUN dotnet restore "./NotesAPI/./NotesAPI.csproj"
+COPY ["NoteBook.API/NoteBook.API.csproj", "NoteBook.API/"]
+RUN dotnet restore "./NoteBook.API/./NoteBook.API.csproj"
 COPY . .
-WORKDIR "/src/NotesAPI"
-RUN dotnet build "./NotesAPI.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/NoteBook.API"
+RUN dotnet build "./NoteBook.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./NotesAPI.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./NoteBook.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "NotesAPI.dll"]
+ENTRYPOINT ["dotnet", "NoteBook.API.dll"]
